--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "react-hook-form": "^7.39.4",
     "react-native": "0.69.6"
   },
   "devDependencies": {
