--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-hook-form": "^7.39.4",
-    "reat-native-safec-area-context": "4.3.1",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
