--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-hook-form": "^7.39.4",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-redux": "^8.0.5",
