--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "apiUrl": "192.168.1.106"
+      "apiUrl": "https://backend-staging.playoffside.online/"
     }
   }
 }
