--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-hook-form": "^7.39.4",
+    "react-native": "0.69.6",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.1.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-redux": "^8.0.5",
-    "react-native": "0.69.6",
-    "redux": "^4.2.0",
-    "react-native-reanimated": "~2.9.1"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
