--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -22,6 +23,8 @@
     "react-hook-form": "^7.39.4",
     "react-native": "0.69.6",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-paper": "^5.1.2",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~2.9.1",
     "react-native-remix-icon": "^0.4.0",
     "react-native-safe-area-context": "4.3.1",
