--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "Proyecto-IDS-Mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/app/logoApp.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/app/logoVertical.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -23,13 +23,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/app/logoApp.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.ids.offside"
     },
     "web": {
-      "favicon": "./assets/app/logoApp.png"
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "apiUrl": "https://backend.playoffside.online",
