--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -17,10 +18,12 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "expo": "~46.0.13",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-hook-form": "^7.39.4",
     "react-native": "0.69.6",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-remix-icon": "^0.4.0",
@@ -28,7 +31,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
