--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
-    "dotenv": "^16.0.3",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
@@ -25,6 +24,7 @@
     "react-native": "0.69.6",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-remix-icon": "^0.4.0",
     "react-native-safe-area-context": "4.3.1",
@@ -32,6 +32,7 @@
     "react-native-svg": "12.3.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
+    "expo-updates": "~0.14.7",
     "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
