--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.0.0",
     "react-hook-form": "^7.39.4",
     "react-native": "0.69.6",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.9.1",
@@ -29,7 +30,8 @@
     "react-native-svg": "12.3.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "expo-updates": "~0.14.7"
+    "expo-updates": "~0.14.7",
+    "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
