--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.2",
+    "react-native-platform-searchbar": "^1.2.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-remix-icon": "^0.4.0",
     "react-native-safe-area-context": "4.3.1",
