--- a/package.json
+++ b/package.json
@@ -16,22 +16,25 @@
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "expo": "~46.0.13",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
     "react": "18.0.0",
     "react-hook-form": "^7.39.4",
     "react-native": "0.69.6",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-remix-icon": "^0.4.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "12.3.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "expo-updates": "~0.14.7",
-    "expo-linear-gradient": "~11.4.0"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
