--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-loading-spinner-overlay": "^3.0.1",
+		"react-native-paper": "^5.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-remix-icon": "^0.4.0",
