--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-svg": "12.3.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "expo-av": "~12.0.4"
+    "expo-av": "~12.0.4",
+		"toastify-react-native": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
